@@ -1240,7 +1240,6 @@ class TestCase(unittest.TestCase):
         fileobj.close()
         self.assertTrue(fileobj.name not in p.get_open_files())
 
-    @skip_on_access_denied(only_if=BSD)
     def test_get_connections(self):
         arg = "import socket, time;" \
               "s = socket.socket();" \
@@ -1278,7 +1277,6 @@ class TestCase(unittest.TestCase):
         self.assertRaises(ValueError, p.get_connections, 'foo')
 
     @skipUnless(supports_ipv6())
-    @skip_on_access_denied(only_if=BSD)
     def test_get_connections_ipv6(self):
         s = socket.socket(socket.AF_INET6, socket.SOCK_STREAM)
         s.bind(('::1', 0))
@@ -1289,7 +1287,6 @@ class TestCase(unittest.TestCase):
         self.assertEqual(cons[0].local_address[0], '::1')
 
     @skipUnless(hasattr(socket, 'AF_UNIX'))
-    @skip_on_access_denied(only_if=BSD)
     def test_get_connections_unix(self):
         # tcp
         safe_remove(TESTFN)
@@ -1312,7 +1309,6 @@ class TestCase(unittest.TestCase):
         sock.close()
 
     @skipUnless(hasattr(socket, "fromfd") and not WINDOWS)
-    @skip_on_access_denied(only_if=BSD)
     def test_connection_fromfd(self):
         sock = socket.socket()
         sock.bind(('localhost', 0))
@@ -1332,7 +1328,6 @@ class TestCase(unittest.TestCase):
             sock.close()
             dupsock.close()
 
-    @skip_on_access_denied(only_if=BSD)
     def test_get_connections_all(self):
         tcp_template = "import socket;" \
                        "s = socket.socket($family, socket.SOCK_STREAM);" \
